[package]
name = "adb-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
typed-path = "0.8"

rsa = { version = "0.9.6", features = ["sha1"] }
sha1 = "0.10"
rusb = { git = "https://github.com/a1ien/rusb" }

[profile.release-pr]
inherits = "release"
lto = true
strip = true
codegen-units = 1
