[package]
name = "adb-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
typed-path = "0.9"
mdns-sd = { version = "0.11", default-features = false, optional = true }
chainerror = "1"

# for adb usb
# rsa = { version = "0.9", features = ["sha1"] }
# sha1 = "0.10"
# rusb = { git = "https://github.com/a1ien/rusb" }

[profile.release-pr]
inherits = "release"
lto = true
strip = true
codegen-units = 1

[features]
mdns = ["dep:mdns-sd"]
default = ["mdns"]
